src/objects/SW_Experiences_and_Releases__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Head_Count__c</fullName>
        <label>Actual Head Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Spend__c</fullName>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Android_OS__c</fullName>
        <description>For use on D. Schuster&apos;s POR Experience reports; visible to Dave and team only</description>
        <inlineHelpText>For use on D. Schuster&apos;s POR Experience reports; visible to Dave and team only</inlineHelpText>
        <label>Android OS</label>
        <picklist>
            <picklistValues>
                <fullName>5.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Rel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CXD_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CXD Lead</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>For D. Schuster&apos;s POR charts; visble only to him and his team</description>
        <inlineHelpText>For D. Schuster&apos;s POR charts</inlineHelpText>
        <label>Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Feature_Notice1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Experience/Feature Notice1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Feature Name1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name2__c</fullName>
        <description>Field for Privacy Team</description>
        <label>Feature Name2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name3__c</fullName>
        <description>Field for Privacy Team</description>
        <label>Feature Name3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Revision_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Feature Revision Comments1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Revision_Comments2__c</fullName>
        <description>For Privacy Team</description>
        <label>Feature Revision Comments2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Revision_Comments3__c</fullName>
        <description>For Privacy Team</description>
        <label>Feature Revision Comments3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Enablers__c</fullName>
        <description>Specific field for use by D. Schuster, in POR chart</description>
        <inlineHelpText>Specific field for use by D. Schuster, in POR chart</inlineHelpText>
        <label>Hardware Enablers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_Count_Delta__c</fullName>
        <formula>Projected_Head_Count__c - Actual_Head_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head Count Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JIRA_Project_ID__c</fullName>
        <formula>LEFT(Id,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Feature ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA__c</fullName>
        <description>For D. Schuster&apos;s POR charts; visble only to him and his team</description>
        <inlineHelpText>For D. Schuster&apos;s POR charts</inlineHelpText>
        <label>JIRA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Jira URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_URL2__c</fullName>
        <label>Jira URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Jira_URL3__c</fullName>
        <description>Privacy Team</description>
        <label>Jira URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LE_Date__c</fullName>
        <label>Earliest LE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modem_Dependency__c</fullName>
        <description>For D. Schuster&apos;s POR charts; visble only to him and his team</description>
        <inlineHelpText>For D. Schuster&apos;s POR charts</inlineHelpText>
        <label>Modem Dependency</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Post_Loads__c</fullName>
        <label>Number of Post Loads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Preloads__c</fullName>
        <label>Number of Preloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Parent_Internal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old_Parent_Internal_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oldest_LE_Date__c</fullName>
        <label>Oldest LE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oldest_SA_Date__c</fullName>
        <label>Oldest SA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oldest_TA_Date__c</fullName>
        <label>Oldest TA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Completed_Date1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <inlineHelpText>Will be auto-filled by system, based on Status</inlineHelpText>
        <label>PDD Completed Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Completed_Date2__c</fullName>
        <description>For Privacy Team</description>
        <label>PDD Completed Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Completed_Date3__c</fullName>
        <description>For Privacy Team</description>
        <label>PDD Completed Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Facilitator1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>PDD Facilitator1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (PDD Facilitator1)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDD_Requested_Date1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD Requested Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDD_Status1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDD_Status2__c</fullName>
        <description>Privacy Team</description>
        <label>PDD Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDD_Status3__c</fullName>
        <description>Privacy Team</description>
        <label>PDD Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDD_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDD_URL2__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDD_URL3__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PDD_Update_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>PDD Update Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Leader</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (PM Leader)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POR_Grouping__c</fullName>
        <description>Used for Dave Schuster&apos;s POR Experiences chart; will be filled in by Dave</description>
        <inlineHelpText>Used for Dave Schuster&apos;s POR Experiences chart; will be filled in by Dave</inlineHelpText>
        <label>POR Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POR_Status__c</fullName>
        <inlineHelpText>In, Out, Discovery, Beta, or Exclude From Chart</inlineHelpText>
        <label>POR Status</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude from POR Chart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Date1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Eng Review Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Status1__c</fullName>
        <label>Privacy Eng Review Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Status2__c</fullName>
        <label>Privacy Eng Review Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Eng_Review_Status3__c</fullName>
        <label>Privacy Eng Review Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Engineer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Engineer1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Privacy Engineer1)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Engineer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team field</description>
        <label>Privacy Engineer2</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Privacy Engineer2)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Engineer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Privacy Team</description>
        <label>Privacy Engineer3</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Privacy Engineer3)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Counsel1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Counsel1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Privacy Legal Counsel1)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Counsel2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Privacy Legal Counsel2</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Privacy Legal Counsel2)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Counsel3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Privacy Legal Counsel3</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Privacy Legal Counsel3)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases0SqX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Review Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Comments2__c</fullName>
        <label>Privacy Legal Review Comments2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Comments3__c</fullName>
        <label>Privacy Legal Review Comments3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Status1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Review Status1</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Status2__c</fullName>
        <description>Privacy Team</description>
        <label>Privacy Legal Review Status2</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_Status3__c</fullName>
        <label>Privacy Legal Review Status3</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Legal Review URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_URL2__c</fullName>
        <description>Privacy Team</description>
        <label>Privacy Legal Review URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Review_URL3__c</fullName>
        <description>Privacy Team</description>
        <label>Privacy Legal Review URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Legal_Risk_Level1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <inlineHelpText>L0 = Highly Critical 
L1 = Critical 
L2 = High 
L3 = Medium 
L4 = Low 
L5 = Legal and Compliance Trivial</inlineHelpText>
        <label>Privacy Legal Risk Level1</label>
        <picklist>
            <picklistValues>
                <fullName>L0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Comments1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Review Comments1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Comments2__c</fullName>
        <description>For Privacy Team</description>
        <label>Privacy Review Comments2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Comments3__c</fullName>
        <description>For Privacy Team</description>
        <label>Privacy Review Comments3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Report_URL1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <label>Privacy Review Report URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Privacy_Risk_Level1__c</fullName>
        <description>Additional field for the Privacy team</description>
        <inlineHelpText>P0 = Critical/Code Review 
P1 = Critical 
P2 = High 
P3 = Medium 
P4 = Low 
P5 = Privacy Trivial</inlineHelpText>
        <label>Privacy Risk Level1</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Risk_Level2__c</fullName>
        <description>For Privacy Team</description>
        <inlineHelpText>P0 = Critical/Code Review 
P1 = Critical 
P2 = High 
P3 = Medium 
P4 = Low 
P5 = Privacy Trivial</inlineHelpText>
        <label>Privacy Risk Level2</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Risk_Level3__c</fullName>
        <description>For Privacy Team</description>
        <inlineHelpText>P0 = Critical/Code Review 
P1 = Critical 
P2 = High 
P3 = Medium 
P4 = Low 
P5 = Privacy Trivial</inlineHelpText>
        <label>Privacy Risk Level3</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Area1__c</fullName>
        <formula>text(SW_Project__r.Product_Area__c)</formula>
        <inlineHelpText>from Parent record</inlineHelpText>
        <label>Product Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Head_Count__c</fullName>
        <label>Projected Head Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Spend__c</fullName>
        <label>Projected Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Release_Android_Version__c</fullName>
        <description>Used for release line/porfolio mapping</description>
        <inlineHelpText>If TYPE is &quot;Release&quot;; used for release line/porfolio mapping 
(ProdMgmt will populate this field)</inlineHelpText>
        <label>Release Android Version</label>
        <picklist>
            <picklistValues>
                <fullName>4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Category__c</fullName>
        <description>Used for release line/porfolio mapping</description>
        <inlineHelpText>If TYPE is &quot;Release&quot;; used for release line/porfolio mapping</inlineHelpText>
        <label>Release Category</label>
        <picklist>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DROID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Date__c</fullName>
        <label>Earliest SA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SW_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Product Manager</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (SW Product Manager)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases0YVX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Product_Manager_text__c</fullName>
        <formula>SW_Product_Manager__r.DisplayLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SW_Product_Manager_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SW_Experiences_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Parent SW Project (if any), for the specified Experience/Release</description>
        <inlineHelpText>This is the Parent SW Project (if any), for the specified Experience/Release</inlineHelpText>
        <label>SW Project (Parent)</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Team_Tech_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Team Lead</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (SW Team Lead)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases0YVm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Engineer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional field for the Privacy team</description>
        <label>Security Engineer1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Security Engineer1)</relationshipLabel>
        <relationshipName>SW_Experiences_and_ReleasesLxdY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Engineer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Security Engineer2</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Security Engineer2)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases0YUU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Engineer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Privacy Team</description>
        <label>Security Engineer3</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>SW Experiences and Releases (Security Engineer3)</relationshipLabel>
        <relationshipName>SW_Experiences_and_Releases0YUe</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>